--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
         
         <p id="notice"><%= notice %></p>
       
+        GitHubActiosのテスト
         <%= yield %>
       </div>
     </div>
