--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
         <p id="notice"><%= notice %></p>
       
         GitHubActiosのテスト
+        fhdsalkfhjksaldhfaksdhjfak
         <%= yield %>
       </div>
     </div>
