--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
         
         
         <p id="notice"><%= notice %></p>
-
+        (｢・ω・)｢ｶﾞｵｰ
         <%= yield %>
       </div>
     </div>
